[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/icon/icon_system_officer.png" type="Texture" id=1]
[ext_resource path="res://UI/ShipLabelUI.gd" type="Script" id=3]
[ext_resource path="res://UI/ShipLabelRT.gd" type="Script" id=4]

[node name="ShipLabelUI" type="PanelContainer"]
margin_right = 200.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 128 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipLabelRT" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 121.0
mouse_filter = 2
bbcode_enabled = true
script = ExtResource( 4 )

[node name="Pilot" type="TextureRect" parent="ShipLabelRT"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.59341
margin_top = -11.1476
margin_right = 27.5934
margin_bottom = 12.8524
size_flags_horizontal = 3
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_ShipLabelUI_gui_input"]
[connection signal="gui_input" from="ShipLabelRT/Pilot" to="." method="_on_Pilot_gui_input"]
